--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fastcrm-react-app",
   "private": true,
   "version": "0.0.0",
+  "description": "FastCRM React App",
   "type": "module",
   "scripts": {
     "dev": "vite",
